--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
                     <div><i id="skills-circle" class="far fa-dot-circle"></i></div>
                     <div><i id="contact-circle" class="far fa-dot-circle"></i></div>
                 </div>
-                <a href="#home-page">Home</a>
-                <a href="#project-page">Projects</a>
-                <a href="#about-page">About</a>
-                <a href="#skills-page">Skills</a>
-                <a href="#contact-page">Contact</a>
+                <a href="#home">Home</a>
+                <a href="#projects">Projects</a>
+                <a href="#about">About</a>
+                <a href="#skills">Skills</a>
+                <a href="#contact">Contact</a>
             </nav>
         </header>
     <!-- PAGE 1 - HOME -->
-        <Section id="home-page">
+        <Section id="home">
             <div id="particles-js"></div>
             <section class="home-content">
                 <h1 class="ellis1">ELLIS HORNABROOK</h1>
@@ -47,16 +47,67 @@
         </Section>
 
     <!-- PAGE 2 - PROJECTS -->
-        <Section id="project-page">
+        <Section id="projects">
             <div id="particles-js"></div>
             <h3>P R O J E C T S</h3>
             <section class="pro-grid">
-                <a href="" target="_blank" class="box1"><p>Project 1 - COMING SOON</p></a>
-                <a href="" target="_blank" class="box2"><p>Project 2 - COMING SOON</p></a>
-                <a href="" target="_blank" class="box1"><p>Project 3 - COMING SOON</p></a>
-                <a href="" target="_blank" class="box2"><p>Project 4 - COMING SOON</p></a>
-                <a href="" target="_blank" class="box1"><p>Project 5 - COMING SOON</p></a>
-                <a href="" target="_blank" class="box2"><p>Project 6 - COMING SOON</p></a>
+                <div class="box1" id="rickandmorty">
+                    <section>
+                        <h4>Rick & Morty Team Selector</h4>
+                        <p></p>
+                        <span>
+                            <a href="https://rick-and-morty-teams.ellisthedev.co.uk/" target="_blank"><i class="fas fa-desktop"></i></a>
+                            <a href="https://github.com/EllisHornabrook/rick-and-morty-teams/" target="_blank"><i class="fab fa-github"></i></a>
+                        </span>
+                    </section>
+                </div>
+                <div class="box2" id="no1se">
+                    <section>
+                        <h4>No.1 South East</h4>
+                        <p></p>
+                        <a href="https://no1southeast.web.app/" target="_blank"><i class="fas fa-desktop"></i></a>
+                    </section>
+                </div>
+                <div class="box1" id="footballteam">
+                    <section>
+                        <h4>Football Team Generator - COMING SOON</h4>
+                        <p><i class="fas fa-user-clock"></i></p>
+                        <!-- <span>
+                            <a href="" target="_blank"><i class="fas fa-desktop"></i></a>
+                            <a href="" target="_blank"><i class="fab fa-github"></i></a>
+                        </span> -->
+                    </section>
+                </div>
+                <div class="box2" id="gungame">
+                    <section>
+                        <h4>Gun Game</h4>
+                        <p></p>
+                        <span>
+                            <a href="https://ellishornabrook.github.io/gun-game/" target="_blank"><i class="fas fa-desktop"></i></a>
+                            <a href="https://github.com/EllisHornabrook/gun-game/" target="_blank"><i class="fab fa-github"></i></a>
+                        </span>
+                    </section>
+                </div>
+                <div class="box1" id="morsecode">
+                    <section>
+                        <h4>Morse Code Translator</h4>
+                        <p></p>
+                        <span>
+                            <a href="https://ellishornabrook.github.io/morse-code-translator/" target="_blank"><i class="fas fa-desktop"></i></a>
+                            <a href="https://github.com/EllisHornabrook/morse-code-translator/" target="_blank"><i class="fab fa-github"></i></a>
+                        </span>
+                    </section>
+                </div>
+                <div class="box2" id="raptrumps">
+                    <section>
+                        <h4>Rap Trumps - IN THE WORKS <i class="fas fa-tools"></i></h4>
+                        <p></p>
+                        <span>
+                            <a href="https://rap-trumps.ellisthedev.co.uk/" target="_blank"><i class="fas fa-desktop"></i></a>
+                            <a href="https://github.com/EllisHornabrook/rap-trumps/" target="_blank"><i class="fab fa-github"></i></a>
+                        </span>
+                    </section>
+                </div>
             </section>
         </Section>
 
@@ -64,7 +115,7 @@
         <img class="divider-pic" src="/images/dividerpic2.png">
 
     <!-- PAGE 3 - ABOUT ME -->
-        <Section class="mainbox" id="about-page">
+        <Section class="mainbox" id="about">
             <div class="page-head head-right">
                 <p>ABOUT</p>
             </div>
@@ -88,7 +139,7 @@
         <div class="skills-divider-one"></div>
 
     <!-- PAGE 4 - SKILLS -->
-        <Section class="mainbox" id="skills-page">
+        <Section class="mainbox" id="skills">
             <div class="page-head head-left">
                 <p>SKILLS</p>
             </div>
@@ -112,7 +163,7 @@
         <div class="contact-divider"></div>
 
     <!-- PAGE 5 - CONTACT -->
-        <Section class="mainbox" id="contact-page">
+        <Section class="mainbox" id="contact">
             <div class="page-head head-right">
                 <p>CONTACT</p>
             </div>
