Added Football Team Generator link to desktop icon

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
                     <section>
                         <h4>Football Team Generator - COMING SOON</h4>
                         <p><i class="fas fa-user-clock"></i></p>
-                        <!-- <span>
-                            <a href="" target="_blank"><i class="fas fa-desktop"></i></a>
+                        <span>
+                            <a href="https://football-team-generator.web.app/" target="_blank"><i class="fas fa-desktop"></i></a>
                             <a href="" target="_blank"><i class="fab fa-github"></i></a>
-                        </span> -->
+                        </span>
                     </section>
                 </div>
                 <div class="box2" id="gungame">
