Removed AOS to fix mobile bug+added project links

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="manifest" href="images/site.webmanifest">
     <link rel="mask-icon" href="images/safari-pinned-tab.svg" color="#5bbad5">
     <link href="https://fonts.googleapis.com/css2?family=Arimo&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 </head>
@@ -65,16 +64,18 @@
                     <section>
                         <h4>No.1 South East</h4>
                         <p></p>
-                        <a href="https://no1southeast.web.app/" target="_blank"><i class="fas fa-desktop"></i></a>
+                        <span>
+                            <a href="https://no1southeast.web.app/" target="_blank"><i class="fas fa-desktop"></i></a>
+                        </span>
                     </section>
                 </div>
                 <div class="box1" id="footballteam">
                     <section>
-                        <h4>Football Team Generator - COMING SOON</h4>
+                        <h4>Football Team Generator - IN THE WORKS</h4>
                         <p><i class="fas fa-user-clock"></i></p>
                         <span>
                             <a href="https://football-team-generator.web.app/" target="_blank"><i class="fas fa-desktop"></i></a>
-                            <a href="" target="_blank"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/EllisHornabrook/football-team-generator" target="_blank"><i class="fab fa-github"></i></a>
                         </span>
                     </section>
                 </div>
@@ -168,27 +169,25 @@
                 <p>CONTACT</p>
             </div>
             <section class="insidebox contact-css">
-                <div style="background-color: #ed0a3f88;" data-aos="fade-left" data-aos-duration="750">
+                <div style="background-color: #ed0a3f88;">
                     <i class="fas fa-mobile-alt"></i> <p>(+44)7715 443314</p> </div>
-                <div style="background-color: #50bee688;" class="right" data-aos="fade-right" data-aos-duration="750">
+                <div style="background-color: #50bee688;" class="right">
                     <a href="https://www.linkedin.com/in/ellis-hornabrook/" target="_blank">linkedin/ellis-hornabrook</a> <i class="fab fa-linkedin"></i> </div>
-                <div style="background-color: #ffff0083;" data-aos="fade-left" data-aos-duration="750">
+                <div style="background-color: #ffff0083;">
                     <i class="fas fa-envelope-open-text"></i> <p>ellishornabrook@gmail.com</p> </div>
-                <div style="background-color: #ff00cc80;" class="right" data-aos="fade-right" data-aos-duration="750">
+                <div style="background-color: #ff00cc80;" class="right">
                     <a href="https://github.com/EllisHornabrook" target="_blank">github/EllisHornabrook</a> <i class="fab fa-github"></i>  </div>
-                <div style="background-color: #66ff667e;" data-aos="fade-left" data-aos-duration="750">
+                <div style="background-color: #66ff667e;">
                     <i class="fas fa-home"></i> <p>Braintree, Essex, England</p> </div>
             </Section>
         </section>
         <footer>
             <p>Site design / logo © 2020 Ellis Hornabrook</p>
-            <a class="top-link" href="#home-page"><i class="fas fa-caret-square-up"></i></a>
+            <a class="top-link" href="#home"><i class="fas fa-caret-square-up"></i></a>
         </footer>
     </main>
     <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> <!-- stats.js lib --> <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
-    <script src="javascript.js"></script>
     <script src="particles.js"></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>AOS.init();</script>
+    <script src="javascript.js"></script>
 </body>
 </html>
