Changed projects styling+fixed particles.js import

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                 </div>
                 <div class="box1" id="footballteam">
                     <section>
-                        <h4>Football Team Generator - IN THE WORKS</h4>
-                        <p><i class="fas fa-user-clock"></i></p>
+                        <h4>Football Team Generator - IN THE WORKS <i class="fas fa-tools"></i></h4>
+                        <p></p>
                         <span>
                             <a href="https://football-team-generator.web.app/" target="_blank"><i class="fas fa-desktop"></i></a>
                             <a href="https://github.com/EllisHornabrook/football-team-generator" target="_blank"><i class="fab fa-github"></i></a>
@@ -186,7 +186,8 @@
             <a class="top-link" href="#home"><i class="fas fa-caret-square-up"></i></a>
         </footer>
     </main>
-    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> <!-- stats.js lib --> <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="https://threejs.org/examples/js/libs/stats.min.js"></script>
     <script src="particles.js"></script>
     <script src="javascript.js"></script>
 </body>
