minor tweaks to styling and links

--- a/index.html
+++ b/index.html
@@ -50,65 +50,77 @@
             <div id="particles-js"></div>
             <h3>P R O J E C T S</h3>
             <section class="pro-grid">
-                <div class="box1" id="rickandmorty">
-                    <section>
-                        <h4>Rick & Morty Team Selector</h4>
-                        <p></p>
+                <article class="box1" id="rickandmorty">
+                    <section class="project-styles">
+                        <div>
+                            <h4>Rick & Morty Team Selector</h4>
+                            <p></p>
+                        </div>
                         <span>
-                            <a href="https://rick-and-morty-teams.ellisthedev.co.uk/" target="_blank"><i class="fas fa-desktop"></i></a>
+                            <a href="https://rick-and-morty-teams.ellisthedev.co.uk/" target="_blank"><i class="fas fa-laptop-code"></i></a>
                             <a href="https://github.com/EllisHornabrook/rick-and-morty-teams/" target="_blank"><i class="fab fa-github"></i></a>
                         </span>
                     </section>
-                </div>
-                <div class="box2" id="no1se">
-                    <section>
-                        <h4>No.1 South East</h4>
-                        <p></p>
-                        <span>
-                            <a href="https://no1southeast.web.app/" target="_blank"><i class="fas fa-desktop"></i></a>
+                </article>
+                <article class="box2" id="no1se">
+                    <section class="project-styles">
+                        <div>
+                            <h4>No.1 South East</h4>
+                            <p></p>
+                        </div>
+                        <span class="single-link">
+                            <a href="https://www.no1southeast.co.uk/" target="_blank"><i class="fas fa-laptop-code"></i></a>
                         </span>
                     </section>
-                </div>
-                <div class="box1" id="footballteam">
-                    <section>
-                        <h4>Football Team Generator - IN THE WORKS <i class="fas fa-tools"></i></h4>
-                        <p></p>
+                </article>
+                <article class="box1" id="footballteam">
+                    <section class="project-styles">
+                        <div>
+                            <h4>Football Team Generator</h4>
+                            <p>IN THE WORKS</p>
+                        </div>
                         <span>
-                            <a href="https://football-team-generator.web.app/" target="_blank"><i class="fas fa-desktop"></i></a>
+                            <a href="https://football-team-generator.web.app/" target="_blank"><i class="fas fa-laptop-code"></i></a>
                             <a href="https://github.com/EllisHornabrook/football-team-generator" target="_blank"><i class="fab fa-github"></i></a>
                         </span>
                     </section>
-                </div>
-                <div class="box2" id="gungame">
-                    <section>
-                        <h4>Gun Game</h4>
-                        <p></p>
+                </article>
+                <article class="box2" id="gungame">
+                    <section class="project-styles">
+                        <div>
+                            <h4>Gun Game</h4>
+                            <p></p>
+                        </div>
                         <span>
-                            <a href="https://ellishornabrook.github.io/gun-game/" target="_blank"><i class="fas fa-desktop"></i></a>
+                            <a href="https://ellishornabrook.github.io/gun-game/" target="_blank"><i class="fas fa-laptop-code"></i></a>
                             <a href="https://github.com/EllisHornabrook/gun-game/" target="_blank"><i class="fab fa-github"></i></a>
                         </span>
                     </section>
-                </div>
-                <div class="box1" id="morsecode">
-                    <section>
-                        <h4>Morse Code Translator</h4>
-                        <p></p>
+                </article>
+                <article class="box1" id="morsecode">
+                    <section class="project-styles">
+                        <div>
+                            <h4>Morse Code Translator</h4>
+                            <p></p>
+                        </div>
                         <span>
-                            <a href="https://ellishornabrook.github.io/morse-code-translator/" target="_blank"><i class="fas fa-desktop"></i></a>
+                            <a href="https://ellishornabrook.github.io/morse-code-translator/" target="_blank"><i class="fas fa-laptop-code"></i></a>
                             <a href="https://github.com/EllisHornabrook/morse-code-translator/" target="_blank"><i class="fab fa-github"></i></a>
                         </span>
                     </section>
-                </div>
-                <div class="box2" id="raptrumps">
-                    <section>
-                        <h4>Rap Trumps - IN THE WORKS <i class="fas fa-tools"></i></h4>
-                        <p></p>
+                </article>
+                <article class="box2" id="raptrumps">
+                    <section class="project-styles">
+                        <div>
+                            <h4>Rap Trumps</h4>
+                            <p>IN THE WORKS</p>
+                        </div>
                         <span>
-                            <a href="https://rap-trumps.ellisthedev.co.uk/" target="_blank"><i class="fas fa-desktop"></i></a>
+                            <a href="https://rap-trumps.ellisthedev.co.uk/" target="_blank"><i class="fas fa-laptop-code"></i></a>
                             <a href="https://github.com/EllisHornabrook/rap-trumps/" target="_blank"><i class="fab fa-github"></i></a>
                         </span>
                     </section>
-                </div>
+                </article>
             </section>
         </Section>
 
@@ -121,16 +133,16 @@
                 <p>ABOUT</p>
             </div>
             <section class="insidebox about-css">
-                <img class="businpic" src="/images/busin.jpg">
+                <img class="businpic" src="/images/Ellis Hornabrook.png">
                 <p>
                     I am a 24 year old from Essex. After working as a manager in Retail since leaving college, I decided to pursue a 12-week intensive software development bootcamp at _nology. Since starting the course my passion for coding has developed into new heights. It is as addictive as it is challenging and something I genuinely enjoy, I am thoroughly looking forward to beginning my career as a Junior Software Developer.
                 </p>
                 <p>  
                     I can build performant, maintainable and scalable applications and troubleshoot and solve bugs in existing applications. I will bring an ambitious, forward-thinking attitude to your development process and can adapt to meet the requirements of the role.
-                    I'm currently working mostly in HTML, CSS, JavaScript and front-end programming but I'm eager to learn other languages and experience more server-side programming. I love to learn, be challenged and solve problems and I am able to work well both in a team environment as well as using my own initiative.
+                    I'm currently working mostly in front-end programming, but I'm eager to learn other languages and experience more server-side programming. Being able to create my own games in the future is an huge dream of mine. I love to learn, be challenged and solve problems.
                 </p>
                 <p>
-                    Hobbies that I enjoy in my spare time are: <b>Football</b>, playing for a local 11-a-side team and watching Man City or England play; <b>Gaming</b> on my xbox, mostly playing Warzone; <b>Mixed Martial Arts</b>, training in an gym and watching the UFC fights; <b>Podcasts</b>, watching 'The Joe Rogan Experience' and 'Bad Friends'; <b>Music</b>, listening to mainly Hip-Hop.
+                    Hobbies I enjoy in my spare time are: <b>Football</b>, playing for a local 11-a-side team & watching the Man City and England games; <b>Gaming</b> on my xbox, I hope to transition over to PC soon; <b>Mixed Martial Arts</b>, training in a gym and watching the UFC; <b>Podcasts</b>, listening to 'The Joe Rogan Experience' and 'Bad Friends'; <b>Music</b>, Hip-Hop is my jam.
                 </p>
             </section>
         </Section>
