added 5th portfolio photo and re-written styling

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <p></p>
                         </div>
                         <span>
-                            <a href="https://rick-and-morty-teams.ellisthedev.co.uk/" target="_blank"><i class="fas fa-laptop-code"></i></a>
+                            <a href="https://rick-and-morty-6e713.web.app/" target="_blank"><i class="fas fa-laptop-code"></i></a>
                             <a href="https://github.com/EllisHornabrook/rick-and-morty-teams/" target="_blank"><i class="fab fa-github"></i></a>
                         </span>
                     </section>
@@ -68,8 +68,9 @@
                             <h4>No.1 South East</h4>
                             <p></p>
                         </div>
-                        <span class="single-link">
+                        <span>
                             <a href="https://www.no1southeast.co.uk/" target="_blank"><i class="fas fa-laptop-code"></i></a>
+                            <a href="https://github.com/nology-tech/no1-south-east" target="_blank"><i class="fab fa-github"></i></a>
                         </span>
                     </section>
                 </article>
@@ -77,7 +78,7 @@
                     <section class="project-styles">
                         <div>
                             <h4>Football Team Generator</h4>
-                            <p>IN THE WORKS</p>
+                            <p>(BETA)</p>
                         </div>
                         <span>
                             <a href="https://football-team-generator.web.app/" target="_blank"><i class="fas fa-laptop-code"></i></a>
@@ -116,7 +117,7 @@
                             <p>IN THE WORKS</p>
                         </div>
                         <span>
-                            <a href="https://rap-trumps.ellisthedev.co.uk/" target="_blank"><i class="fas fa-laptop-code"></i></a>
+                            <a href="https://rap-trumps.web.app/" target="_blank"><i class="fas fa-laptop-code"></i></a>
                             <a href="https://github.com/EllisHornabrook/rap-trumps/" target="_blank"><i class="fab fa-github"></i></a>
                         </span>
                     </section>
