Added project descriptions

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
             <div id="particles-js"></div>
             <h3>P R O J E C T S</h3>
             <section class="pro-grid">
-                <article class="box1" id="rickandmorty">
+                <article class="box2" id="rickandmorty">
                     <section class="project-styles">
                         <div>
                             <h4>Rick & Morty Team Selector</h4>
-                            <p></p>
+                            <p>A project to search, filter & choose a team. Built using React, a Rick and Morty API & Reach-Router. With Firebase Hosting, Authentication & Cloud Firestore.</p>
                         </div>
                         <span>
                             <a href="https://rick-and-morty-6e713.web.app/" target="_blank"><i class="fas fa-laptop-code"></i></a>
@@ -62,35 +62,11 @@
                         </span>
                     </section>
                 </article>
-                <article class="box2" id="no1se">
-                    <section class="project-styles">
-                        <div>
-                            <h4>No.1 South East</h4>
-                            <p></p>
-                        </div>
-                        <span>
-                            <a href="https://www.no1southeast.co.uk/" target="_blank"><i class="fas fa-laptop-code"></i></a>
-                            <a href="https://github.com/nology-tech/no1-south-east" target="_blank"><i class="fab fa-github"></i></a>
-                        </span>
-                    </section>
-                </article>
-                <article class="box1" id="footballteam">
-                    <section class="project-styles">
-                        <div>
-                            <h4>Football Team Generator</h4>
-                            <p>(BETA)</p>
-                        </div>
-                        <span>
-                            <a href="https://football-team-generator.web.app/" target="_blank"><i class="fas fa-laptop-code"></i></a>
-                            <a href="https://github.com/EllisHornabrook/football-team-generator" target="_blank"><i class="fab fa-github"></i></a>
-                        </span>
-                    </section>
-                </article>
-                <article class="box2" id="gungame">
+                <article class="box1" id="gungame">
                     <section class="project-styles">
                         <div>
                             <h4>Gun Game</h4>
-                            <p></p>
+                            <p>A first person target shooter JS game. Built using JavaScript, HTML & CSS, highlighting the application of CSS Animation.</p>
                         </div>
                         <span>
                             <a href="https://ellishornabrook.github.io/gun-game/" target="_blank"><i class="fas fa-laptop-code"></i></a>
@@ -98,11 +74,23 @@
                         </span>
                     </section>
                 </article>
+                <article class="box2" id="footballteam">
+                    <section class="project-styles">
+                        <div>
+                            <h4>Football Team Generator (BETA)</h4>
+                            <p>A web app used to generate random teams for football games of any group size. Built in React, using a mobile-first approach. This project uses OOP class-based components.</p>
+                        </div>
+                        <span>
+                            <a href="https://football-team-generator.web.app/" target="_blank"><i class="fas fa-laptop-code"></i></a>
+                            <a href="https://github.com/EllisHornabrook/football-team-generator" target="_blank"><i class="fab fa-github"></i></a>
+                        </span>
+                    </section>
+                </article>
                 <article class="box1" id="morsecode">
                     <section class="project-styles">
                         <div>
                             <h4>Morse Code Translator</h4>
-                            <p></p>
+                            <p>A basic Enlish to Morse translator. Built using JavaScript, HTML & CSS in the early stages of the course. </p>
                         </div>
                         <span>
                             <a href="https://ellishornabrook.github.io/morse-code-translator/" target="_blank"><i class="fas fa-laptop-code"></i></a>
@@ -110,11 +98,24 @@
                         </span>
                     </section>
                 </article>
-                <article class="box2" id="raptrumps">
+                <article class="box2" id="no1se">
+                    <section class="project-styles">
+                        <div>
+                            <h4>No.1 South East (CLIENT PROJECT)</h4>
+                            <p></p>
+                            <p>A React-based web app providing discounts in independent bars & restaurants in South East London. Developed by myself and eight other _nology students using agile methods.</p>
+                        </div>
+                        <span>
+                            <a href="https://www.no1southeast.co.uk/" target="_blank"><i class="fas fa-laptop-code"></i></a>
+                            <a href="https://github.com/nology-tech/no1-south-east" target="_blank"><i class="fab fa-github"></i></a>
+                        </span>
+                    </section>
+                </article>
+                <article class="box1" id="raptrumps">
                     <section class="project-styles">
                         <div>
                             <h4>Rap Trumps</h4>
-                            <p>IN THE WORKS</p>
+                            <p>(IN THE WORKS)</p>
                         </div>
                         <span>
                             <a href="https://rap-trumps.web.app/" target="_blank"><i class="fas fa-laptop-code"></i></a>
