--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <article class="box2" id="footballteam">
                     <section class="project-styles">
                         <div>
-                            <h4>Football Team Generator (BETA)</h4>
+                            <h4>Football Team Generator</h4>
                             <p>A web app used to generate random teams for football games of any group size. Built in React, using a mobile-first approach. This project uses OOP class-based components.</p>
                         </div>
                         <span>
@@ -101,7 +101,7 @@
                 <article class="box2" id="no1se">
                     <section class="project-styles">
                         <div>
-                            <h4>No.1 South East (CLIENT PROJECT)</h4>
+                            <h4>No.1 South East (Client Project)</h4>
                             <p></p>
                             <p>A React-based web app providing discounts in independent bars & restaurants in South East London. Developed by myself and eight other _nology students using agile methods.</p>
                         </div>
@@ -115,7 +115,7 @@
                     <section class="project-styles">
                         <div>
                             <h4>Rap Trumps</h4>
-                            <p>(IN THE WORKS)</p>
+                            <p>(Work in progress)</p>
                         </div>
                         <span>
                             <a href="https://rap-trumps.web.app/" target="_blank"><i class="fas fa-laptop-code"></i></a>
