--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
                         </span>
                     </section>
                 </article>
-                <article class="box1" id="gungame">
+                <article class="box1" id="raptrumps">
                     <section class="project-styles">
                         <div>
-                            <h4>Gun Game</h4>
-                            <p>A first person target shooter JS game. Built using JavaScript, HTML & CSS, highlighting the application of CSS Animation.</p>
+                            <h4>Rap Trumps</h4>
+                            <p>A Top Trumps inspired game built in React, with an automated opponent that takes turns on loss of the player.</p>
                         </div>
                         <span>
-                            <a href="https://ellishornabrook.github.io/gun-game/" target="_blank"><i class="fas fa-laptop-code"></i></a>
-                            <a href="https://github.com/EllisHornabrook/gun-game/" target="_blank"><i class="fab fa-github"></i></a>
+                            <a href="https://rap-trumps.web.app/" target="_blank"><i class="fas fa-laptop-code"></i></a>
+                            <a href="https://github.com/EllisHornabrook/rap-trumps/" target="_blank"><i class="fab fa-github"></i></a>
                         </span>
                     </section>
                 </article>
@@ -86,15 +86,15 @@
                         </span>
                     </section>
                 </article>
-                <article class="box1" id="morsecode">
+                <article class="box1" id="gungame">
                     <section class="project-styles">
                         <div>
-                            <h4>Morse Code Translator</h4>
-                            <p>A basic Enlish to Morse translator. Built using JavaScript, HTML & CSS in the early stages of the course. </p>
+                            <h4>Gun Game</h4>
+                            <p>A first person target shooter JS game. Built using JavaScript, HTML & CSS, highlighting the application of CSS Animation.</p>
                         </div>
                         <span>
-                            <a href="https://ellishornabrook.github.io/morse-code-translator/" target="_blank"><i class="fas fa-laptop-code"></i></a>
-                            <a href="https://github.com/EllisHornabrook/morse-code-translator/" target="_blank"><i class="fab fa-github"></i></a>
+                            <a href="https://ellishornabrook.github.io/gun-game/" target="_blank"><i class="fas fa-laptop-code"></i></a>
+                            <a href="https://github.com/EllisHornabrook/gun-game/" target="_blank"><i class="fab fa-github"></i></a>
                         </span>
                     </section>
                 </article>
@@ -111,15 +111,15 @@
                         </span>
                     </section>
                 </article>
-                <article class="box1" id="raptrumps">
+                <article class="box1" id="morsecode">
                     <section class="project-styles">
                         <div>
-                            <h4>Rap Trumps</h4>
-                            <p>(Work in progress)</p>
+                            <h4>Morse Code Translator</h4>
+                            <p>A basic Enlish to Morse translator. Built using JavaScript, HTML & CSS in the early stages of the course. </p>
                         </div>
                         <span>
-                            <a href="https://rap-trumps.web.app/" target="_blank"><i class="fas fa-laptop-code"></i></a>
-                            <a href="https://github.com/EllisHornabrook/rap-trumps/" target="_blank"><i class="fab fa-github"></i></a>
+                            <a href="https://ellishornabrook.github.io/morse-code-translator/" target="_blank"><i class="fas fa-laptop-code"></i></a>
+                            <a href="https://github.com/EllisHornabrook/morse-code-translator/" target="_blank"><i class="fab fa-github"></i></a>
                         </span>
                     </section>
                 </article>
